--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dustjs-linkedin": "~2.0.3",
     "dustjs-helpers": "~1.1.1",
     "makara": "~0.3.0",
-    "node-trello": "~0.1.4"
+    "node-trello": "~0.1.4",
+    "async": "~0.2.10"
   },
   "devDependencies": {
     "mocha": "~1.17.0",
